deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: /blueprint
  name: beets # kpt-set: ${name}
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|Deployment|default|blueprint'
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webapp
    spec:
      serviceAccountName: beets # kpt-set: ${name}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - name: app
        image: ghcr.io/mgoltzsche/beets:0.18.0 # kpt-set: ${image}:${version}
        imagePullPolicy: IfNotPresent
        args: ["webrouter"]
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8337 # kpt-set: ${port}
        livenessProbe:
          httpGet:
            path: "/" # kpt-set: ${healthcheck}
            port: 8337 # kpt-set: ${port}
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        startupProbe:
          httpGet:
            path: "/" # kpt-set: ${healthcheck}
            port: 8337 # kpt-set: ${port}
          periodSeconds: 3
          timeoutSeconds: 2
          failureThreshold: 7
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: beets-data
