deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /blueprint
  name: beets # kpt-set: ${name}
  annotations:
    kubemate.mgoltzsche.github.com/nav-title: "Beets UI"
    kubemate.mgoltzsche.github.com/nav-icon: favicon.ico
    kubemate.mgoltzsche.github.com/rewrite-target: /
    kubemate.mgoltzsche.github.com/set-headers: X-Script-Name=/beets
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|Ingress|default|blueprint'
spec:
  ingressClassName: kubemate
  rules:
  - http:
      paths:
      - path: /beets/ # kpt-set: /${name}/
        pathType: Prefix
        backend:
          service:
            name: beets # kpt-set: ${name}
            port:
              number: 8337 # kpt-set: ${port}
